--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,5 +7,5 @@ pages:
 - 'Courbe_du_soleil.md'
 - 'Historique_année_précédent.md'
 - 'Modification_tuto.md'
-
+- 'etat_d'avancement.md'
 theme: readthedocs 
