--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ pages:
 - 'Partie_mécanique.md'
 - 'Partie_electronique.md'
 - 'Partie_logiciel.md'
+- 'Carte_de_mesure.md'
 - 'Courbe_du_soleil.md'
 - 'Historique_année_précédent.md'
 - 'Modification_tuto.md'
